<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/OrganizacaoGeral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/OrganizacaoCamposBotoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EAE5E7"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/OrganizacaoCampos"
                android:layout_width="232dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextViewNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nome Cliente"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/EditTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/TextViewRegistros"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="Registros: 0"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/OrganizacaoBotoes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ButtonIncluir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickIncluir"
                    android:text="@string/botao_incluir" />

                <Button
                    android:id="@+id/ButtonExcluir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickExcluir"
                    android:text="@string/botao_excluir" />

                <Button
                    android:id="@+id/ButtonConsultar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickConsultar"
                    android:text="@string/botao_consulta" />

                <Button
                    android:id="@+id/ButtonListar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickListar"
                    android:text="@string/botao_listar" />

                <Button
                    android:id="@+id/ButtonEsvaziarBD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickEsvaziarBD"
                    android:text="@string/botao_esvaziar_bd" />

                <Button
                    android:id="@+id/ButtonLimpar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickLimpar"
                    android:text="@string/botao_limpar" />

                <Button
                    android:id="@+id/ButtonFechar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickFechar"
                    android:text="@string/botao_fechar" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/OrganizacaoListaDados"
            android:layout_width="match_parent"
            android:layout_height="438dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewListaDados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lista dos dados"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EditTextListaDados"
                android:layout_width="match_parent"
                android:layout_height="432dp"
                android:ems="10"
                android:gravity="left|top"
                android:inputType="textMultiLine|text"
                android:singleLine="false"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>